further responsive styling

--- a/index.html
+++ b/index.html
@@ -22,13 +22,31 @@
   </nav>
   <div id="tile1">
     <div id="profile">
+      <ul>
+        <li>
+          <a href="https://twitter.com/julezhillebrand" target="_blank">
+            <i class="fab fa-twitter-square"></i>
+          </a>
+        </li>
+        <li>
+          <a href="https://www.linkedin.com/in/rainer-dr-hillebrand-b015b3141" target="_blank">
+            <i class="fab fa-linkedin"></i>
+          </a>
+        </li>
+        <li>
+          <a href="mailto: rainer@hillebrand-online.com" target="_blank">
+            <i class="fas fa-envelope"></i>
+          </a>
+        </li>
+      </ul>
       <img src="images/profile.png" alt="Rainer Hillebrand">
     </div>
     <div id="desc">
       <h3 class="attributes">Vater - Ehemann - Fotograf</h3>
       <h1>Rainer Hillebrand</h1>
-      <p>“Jeder Mensch ist ein Knüller. Manche sind nur noch mehr Knüller als andere. Rainer Hillebrand ist einer davon.” <br>— <b>viele</b></p>
-      <p>“Der Grund für meine miserable Eckenquote gegen Alster” <br>— <b>jeder Hockeyspieler des Jahrgangs ‘97</b></p>
+      <p>“Jeder Mensch ist ein Knüller. Manche sind nur noch mehr Knüller als andere. Rainer Hillebrand ist einer davon.” — <b>viele</b></p>
+      <p>“Der Grund für meine miserable Eckenquote gegen Alster.” — <b>jeder Hockeyspieler des Jahrgangs ‘97</b></p>
+      <p>“Hat mich super in Szene gesetzt - gerne wieder!” — <b>irgendeine Giraffe in Südafrika</b></p>
     </div>
   </div>
 
